# minconvrnns

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mcrnn/: benchmark_mcrnns.ipynb  run_experiment.sh  runtime_tests.ipynb  train_geopotential.sh  train_job.sh  train_ns_s15_tf5.sh  train_ns_s25_tf20.sh
src/mcrnn/configs/: config.yaml
src/mcrnn/configs/data/: geopotential.yaml  navier-stokes.yaml  random.yaml  wave.yaml
src/mcrnn/configs/experiment/: geopotential.yaml  navier-stokes.yaml  random.yaml  wave.yaml
src/mcrnn/configs/model/: convgru.yaml  convlstm.yaml  minconvexplstm.yaml  minconvgru.yaml  minconvlstm.yaml
src/mcrnn/configs/model/norm/: group_norm.yaml  layer_norm.yaml
src/mcrnn/configs/testing/: default.yaml
src/mcrnn/configs/training/: default.yaml
src/mcrnn/configs/training/optimizer/: adam.yaml  adamw.yaml
src/mcrnn/configs/training/scheduler/: plateau.yaml
src/mcrnn/configs/validation/: default.yaml
src/mcrnn/data/data_generation/navier-stokes/: generate_ns_2d.py  random_fields.py
src/mcrnn/data/pytorch_datasets/: __init__.py  geopotential.py  navier_stokes.py
src/mcrnn/models/: __init__.py
src/mcrnn/models/convgru/: convgru.py
src/mcrnn/models/convlstm/: convlstm.py
src/mcrnn/models/minconvexplstm/: minconvexplstm.py
src/mcrnn/models/minconvgru/: minconvgru.py
src/mcrnn/models/minconvlstm/: minconvlstm.py
src/mcrnn/scripts/: evaluate.py  train.py
src/mcrnn/utils/: __init__.py  evaluation_tools.py  helpers.py
